Remove legacy dependencies
Remove the following dependencies and replace with standard Java:
- commons-io
- commons-collections (replaced with commons-collection4)
- guava (replaced with Caffeine, which Guava internally uses anyway)

Issue-ID: POLICY-5592
Change-Id: I264485723ffb862255c112eff597a8a35e3f64a4
Signed-off-by: danielhanrahan <daniel.hanrahan@est.tech>